# musa6500-finalproject

./: .gitignore  LICENSE  README.md  blogpost_1.md  build_notebook.py  build_notebook_v3.py  build_notebook_v4.py  data_ingestion.ipynb  import_v.ipynb  items_2024.parquet  load_building_footprints.py  load_imagery.py  load_labels.py  main.ipynb  main.py  main_v2.ipynb  main_v3.ipynb  main_v4 (1).ipynb  main_v4.ipynb  musa6500_eurosat_project.ipynb  phl-imagery-download.py  pyproject.toml  rgb_change.py  roof_collapse.py  writeup.md
.claude/: settings.local.json
