[project]
name = "musa6500-finalproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pip>=26.0.1",
    "requests>=2.32.5",
    "rioxarray>=0.19.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "tifffile>=2026.3.3",
    "xarray>=2026.2.0",
]
