[project]
name = "musa6500-finalproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "claymodel",
    "dask>=2026.3.0",
    "geopandas>=1.1.3",
    "graphviz>=0.21",
    "ipykernel>=7.2.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "pip>=26.0.1",
    "pydot>=4.0.1",
    "pygmt>=0.17.0",
    "pystac>=1.14.3",
    "pystac-client>=0.9.0",
    "requests>=2.32.5",
    "rioxarray>=0.19.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
    "tifffile>=2026.3.3",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.4",
    "xarray>=2026.2.0",
    "zarr>=3.1.6",
]

[tool.uv.sources]
claymodel = { git = "https://github.com/Clay-foundation/model.git" }
